--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "abhishek pratap singh",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.15.0"
   }
 }
